--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,17 @@
     <string name="h1_20">H1 (20%)</string>
     <string name="h2_50">H2 (50%)</string>
     <string name="h3_80">H3 (80%)</string>
+    <string name="choose_bar">Choose a bar</string>
+    <string name="choose_color">Choose a color</string>
+    <string name="white">White</string>
+    <string name="red">Red</string>
+    <string name="orange">Orange</string>
+    <string name="yellow">Yellow</string>
+    <string name="green">Green</string>
+    <string name="turquoise">Turquoise</string>
+    <string name="blue">Blue</string>
+    <string name="purple">Purple</string>
+    <string name="black">Black</string>
+    <string name="dialog_apply_color">Apply color</string>
 
 </resources>
